# leadsheet

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN-960.md  FORMAT.md  LICENSE  PLAN.md  README.md  REVIEW-TRIAGE-2026-07-12-r2.md  REVIEW-TRIAGE-2026-07-12.md  midi-to-text-plan.md
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
assets/: tweet-card.html
corpus/: automation.ls  dynamics.ls  dynamics.mid  matrix-excerpt.ls  matrix-excerpt.mid  pop.ls  pop.mid  waltz.ls  waltz.mid
eval/drum-edit/: constraints.json  input.ls  instruction.txt  sample-output.ls
eval/extend-4-bars/: constraints.json  input.ls  instruction.txt  sample-output.ls
eval/reharmonize/: constraints.json  input.ls  instruction.txt  sample-output.ls
eval/repair/: constraints.json  input.ls  instruction.txt  sample-output.ls
eval/transcription-grid/: constraints.json  input.ls  instruction.txt
eval/transpose-up-2/: constraints.json  input.ls  instruction.txt  sample-output.ls
leadsheet-cli/: Cargo.toml
leadsheet-cli/src/: eval.rs  main.rs
leadsheet-cli/tests/: cli.rs
leadsheet-core/: Cargo.toml
leadsheet-core/src/: analysis.rs  chord.rs  diff.rs  doc.rs  drums.rs  emit.rs  error.rs  gm.rs  grid.rs  key.rs  lib.rs  metrics.rs  model.rs  notation.rs  parse.rs  pattern.rs  render.rs  tempo.rs
leadsheet-core/tests/: automation.rs  corpus.rs  diagnostics.rs  doc_props.proptest-regressions  doc_props.rs  drum_groups.rs  grid.rs  ingest.rs  (+8 more)
leadsheet-wasm/: Cargo.toml
songs/: rudiments.ls
web/: .gitignore  app.js  build.sh  index.html  ls-mode.js  player.js  style.css
(+4 files in other folders)
