[workspace]
resolver = "3"
members = ["leadsheet-core", "leadsheet-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
midly = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
