[workspace]
resolver = "3"
members = ["leadsheet-core", "leadsheet-cli", "leadsheet-wasm"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[workspace.dependencies]
midly = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
proptest = "1"

[profile.release]
lto = "thin"
